--- a/src/stylesheets/RefDetail.scss
+++ b/src/stylesheets/RefDetail.scss
@@ -3,15 +3,14 @@
 $base-color-lt: #E6F9FF;
 $highlight: white;
 
-@mixin forLargeScreens($media) {
-	@media (min-width: $media/16+em) { @content; }
-}
 
 .ref-detail-wrapper {
 	display: flex;
 	flex-direction: column;
-	padding-left: 4 * $sm-circle-size + 1.5rem;
 	font-family: 'Source Sans Pro', sans-serif;
+	@include forLargeScreens($med-screen) {
+		padding-left: 4 * $sm-circle-size + 1.5rem;
+	}
 
 	p {
 		color: $base-text;
@@ -20,13 +19,21 @@ $highlight: white;
 
 	.screengrab {
 		margin-bottom: 2rem;
+
 		img {
 			max-width: 595px;
+			@include forSmallScreens($sm-screen) {
+				margin-left: -20px;
+			}
 		}
 	}
 				
 	.ref-detail {
 		display: flex;
+		@include forSmallScreens($med-screen) {
+				margin: 0 2rem;
+			}
+
 		.ref-thumb {
 			img {
 				max-width: 150px;
