--- a/src/stylesheets/Toolbar.scss
+++ b/src/stylesheets/Toolbar.scss
@@ -6,7 +6,7 @@
 	border: 2px solid paleturquoise;
 	width: 100%;
 	box-shadow: none;
-	margin: 2rem;
+	margin: 0 2rem;
 
 	&:focus {
 		border: 2px solid paleturquoise;
